package Lesson4;public class BusTicket {
}
