package Lesson4;public class Ticket {
}
