package Lesson4;public interface TicketActions {
}
