package Lesson4;public interface UserActions {
}
